--- a/views/md/md-header.ejs
+++ b/views/md/md-header.ejs
@@ -10,5 +10,5 @@
 <body>
 
   <main>
-    <div class="admin-wrapper">
+    <div class="admin-dashboard-layout">
       <%- include('md-sidebar', { activePage: typeof activePage !== 'undefined' ? activePage : 'dashboard' }) %>
