--- a/views/md/md-sidebar.ejs
+++ b/views/md/md-sidebar.ejs
@@ -29,7 +29,7 @@
             </a>
           </li>
           <li class="menu-item">
-            <form method="POST" action="/logout" style="display: block;">
+            <form method="POST" action="/md_logout" style="display: block;">
               <button type="submit" class="menu-link" style="background: none; border: none; width: 100%; text-align: left; cursor: pointer;">
                 <span class="menu-icon">🚪</span>
                 <span class="menu-text">Logout</span>
