--- a/views/admin/candidate-management/candidate-edit.ejs
+++ b/views/admin/candidate-management/candidate-edit.ejs
@@ -108,7 +108,7 @@
                         </div>
                         <div class="form-group">
                           <label>
-                            <input type="checkbox" name="experience[<%= index %>][currently_work]" <%= work.currently_working === 'on' ? 'checked' : '' %>>
+                            <input type="checkbox" name="experience[<%= index %>][currently_work]" <%= work.currently_working ? 'checked' : '' %>>
                             Currently Working
                           </label>
                         </div>
